--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  background-color: #222;
+  background-color: rgb(147, 90, 240);
   .inner {
     width: 1180px;
     height: 80px;
@@ -17,21 +17,20 @@ header {
         font-size: 24px;
       }
     }
-    #gnb{
+    #gnb {
       position: absolute;
-      right:0;
-      bottom:0;
-      li{
-        float:left;
-        a{
-          display:block;
-          padding:20px 30px;
-          font-weight:500;
+      right: 0;
+      bottom: 0;
+      li {
+        float: left;
+        a {
+          display: block;
+          padding: 20px 30px;
+          font-weight: 500;
           font-size: 14px;
-          color:#fff;
+          color: #fff;
         }
       }
-      
     }
   }
 }
