폰트어썸 및 반응형 기초

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-
+// 화면 반응형 기준픽셀 
+// scss에서는 글로벌 변수 만들기
+$tablet:1180px;
+$mp:540px;
 
 // common
 @import "common/header";
