--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -32,5 +32,39 @@ header {
         }
       }
     }
+
+    .fa-bars {
+      display: none;
+      position: absolute;
+      right: 30px;
+      bottom: 20px;
+      font-size: 36px;
+      color: #fff;
+    }
+  }
+  &.main {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    background: transparent;
+  }
+}
+
+// tablet
+@media screen and (max-width: $tablet) {
+  header {
+    .inner {
+      width: 100%;
+      h1 {
+        left: 30px;
+      }
+      #gnb {
+        display: none;
+      }
+      .fa-bars {
+        display: block;
+      }
+    }
   }
 }
