레이아웃 props 적용

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@ $mp:540px;
 @import "common/header";
 @import "common/reset";
 @import "common/footer";
+@import "common/layout";
 
 // main
 @import "main/content";
