--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -13,6 +13,14 @@ $mp: 540px;
     width: 1180px;
     margin: 100px auto;
     min-height: 400px;
+    transition: 1s;
+    transform: translateY(100px);
+  }
+
+  &.on {
+    > .inner {
+      transform: translateY(0);
+    }
   }
 }
 
