--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -2,47 +2,47 @@ $tablet: 1180px;
 $mp: 540px;
 
 .content {
-  figure {
-    width: 100%;
-    height: 300px;
-    background: gray;
-  }
-
-  > .inner {
-    position: relative;
-    width: 1180px;
-    margin: 100px auto;
-    min-height: 400px;
-    transition: 1s;
-    transform: translateY(100px);
-  }
-
-  &.on {
-    > .inner {
-      transform: translateY(0);
+    figure {
+        width: 100%;
+        height: 300px;
+        background: gray;
     }
-  }
+
+    > .inner {
+        position: relative;
+        width: 1180px;
+        margin: 100px auto;
+        min-height: 400px;
+        transition: opacity 1s, transform 1s;
+        transform: translateY(100px);
+    }
+
+    &.on {
+        > .inner {
+            transform: translateY(0);
+        }
+    }
 }
 
 //tablet
 @media screen and (max-width: $tablet) {
-  .content {
-    figure {
-      height: 200px;
+    .content {
+        figure {
+            height: 200px;
+        }
+        > .inner {
+            width: 100%;
+            margin: 80px auto;
+            padding: 0px 30px;
+        }
     }
-    > .inner {
-      width: 100%;
-      margin: 80px auto;
-      padding: 0px 30px;
-    }
-  }
 }
 
 // mobile
 @media screen and (max-width: $mp) {
-  .content {
-    figure {
-      height: 150px;
+    .content {
+        figure {
+            height: 150px;
+        }
     }
-  }
 }
