--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -1,20 +1,47 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 ul,
 li {
-  list-style: none;
+    list-style: none;
 }
 a {
-  color: #000;
-  text-decoration: none;
+    color: #000;
+    text-decoration: none;
 }
 img {
-  vertical-align: middle;
-  border: 0;
+    vertical-align: middle;
+    border: 0;
 }
 body {
-  background-color: #efefef;
+    background-color: #efefef;
+}
+
+legend,
+caption {
+    position: absolute;
+    top: -2000px;
+}
+
+fieldset {
+    border: none;
+}
+
+table {
+    border: 0;
+    border-collapse: collapse;
+    th {
+        width: 25%;
+        padding: 10px 0px;
+        padding-left: 30px;
+        text-align: left;
+        border-bottom: 1px solid #bbb;
+        &:last-child {
+        }
+    }
+    td {
+        border: none;
+    }
 }
