--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,23 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-// 화면 반응형 기준픽셀 
+// 화면 반응형 기준픽셀
 // scss에서는 글로벌 변수 만들기
-$tablet:1180px;
-$mp:540px;
+$tablet: 1180px;
+$mp: 540px;
 
 // common
-@import "common/header";
-@import "common/reset";
-@import "common/footer";
-@import "common/layout";
+@import 'common/header';
+@import 'common/reset';
+@import 'common/footer';
+@import 'common/layout';
 
 // main
-@import "main/content";
-@import "main/visual";
+@import 'main/content';
+@import 'main/visual';
 
 //sub
-@import "sub/community";
-@import "sub/department";
-@import "sub/gallery";
-@import "sub/join";
-@import "sub/location";
-@import "sub/youtube";
+@import 'sub/community';
+@import 'sub/department';
+@import 'sub/gallery';
+@import 'sub/join';
+@import 'sub/location';
+@import 'sub/youtube';
+@import 'sub/schedule';
